--- a/app/src/main/res/layout/fragment_club.xml
+++ b/app/src/main/res/layout/fragment_club.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,6 +22,10 @@
            <ImageView
                style="@style/imageViewStyle"
                android:src="@drawable/campestre"/>
+            <com.google.android.gms.maps.MapView android:id="@+id/mapClub"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"/>
 
     </LinearLayout>
-</FrameLayout>
+</ScrollView>
