--- a/app/src/main/res/layout/fragment_corregimientos.xml
+++ b/app/src/main/res/layout/fragment_corregimientos.xml
@@ -47,7 +47,10 @@
         <ImageView
            style="@style/imageViewStyle"
             android:src="@drawable/ochali"/>
-
+        <com.google.android.gms.maps.MapView android:id="@+id/mapCor"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_gravity="center"/>
 
     </LinearLayout>
     </ScrollView>
