--- a/app/src/main/res/layout/fragment_amajari.xml
+++ b/app/src/main/res/layout/fragment_amajari.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,9 +25,13 @@
             <ImageView
                style="@style/imageViewStyle"
                 android:src="@drawable/amajari"/>
+            <com.google.android.gms.maps.MapView android:id="@+id/mapAmajari"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"/>
 
 
         </LinearLayout>
 
 
-  </FrameLayout>
+  </ScrollView>
