--- a/app/src/main/res/layout/fragment_mison.xml
+++ b/app/src/main/res/layout/fragment_mison.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,9 +24,13 @@
             <ImageView
                style="@style/imageViewStyle"
                 android:src="@drawable/mi_son"/>
+            <com.google.android.gms.maps.MapView android:id="@+id/mapMison"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
+                android:layout_gravity="center" />
 
         </LinearLayout>
 
 
 
-</FrameLayout>
+</ScrollView>
