--- a/app/src/main/res/layout/fragment_texas.xml
+++ b/app/src/main/res/layout/fragment_texas.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -23,8 +23,13 @@
                 style="@style/imageViewStyle"
                 android:src="@drawable/bar_texas"/>
 
+        <com.google.android.gms.maps.MapView android:id="@+id/mapTexas"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_gravity="center" />
+
         </LinearLayout>
 
 
 
-</FrameLayout>
+</ScrollView>
